chore: Added `GeneratePackageOnBuild` to `src.build.props`

--- a/settings/src.build.props
+++ b/settings/src.build.props
@@ -19,6 +19,8 @@
 
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <RepositoryType>git</RepositoryType>
+
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <PropertyGroup>
