chore: Added `SuppressTfmSupportBuildWarnings` for Configuration `Release`

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -28,6 +28,7 @@
     <SuppressNETCoreSdkPreviewMessage>true</SuppressNETCoreSdkPreviewMessage>
 
     <CheckEolTargetFramework Condition="'$(Configuration)' == 'Debug'">false</CheckEolTargetFramework>
+    <SuppressTfmSupportBuildWarnings Condition="'$(Configuration)' == 'Release'">true</SuppressTfmSupportBuildWarnings>
   </PropertyGroup>
 
   <PropertyGroup Label="Language Configuration">
