--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -15,11 +15,12 @@
     <ImplicitUsings>disable</ImplicitUsings>
 
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
-    <NoWarn>$(NoWarn);1573;1591;1712;IDE0090;CA2252;CA1014;</NoWarn>
+    <NoWarn>$(NoWarn);1573;1591;1712;IDE0090;CA2252;CA1014</NoWarn>
 
     <AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>All</AnalysisMode>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <CodeAnalysisTreatWarningsAsErrors>true</CodeAnalysisTreatWarningsAsErrors>
     <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
     <ReportAnalyzer>true</ReportAnalyzer>
     <RunAnalyzersDuringBuild>true</RunAnalyzersDuringBuild>
