chore: Added `IsPublishable`=`false` for Test Projects

--- a/settings/tests.build.props
+++ b/settings/tests.build.props
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <IsTestProject>true</IsTestProject>
+    <IsPublishable>false</IsPublishable>
+
   </PropertyGroup>
 
 </Project>
