chore: Extended `NoWarn` with `CA1707` for Test Projects

--- a/settings/tests.build.props
+++ b/settings/tests.build.props
@@ -4,6 +4,7 @@
     <IsTestProject>true</IsTestProject>
     <IsPublishable>false</IsPublishable>
 
+    <NoWarn>$(NoWarn);CA1707</NoWarn>
   </PropertyGroup>
 
 </Project>
