chore: Placed `IsPackable` and `IsTestProject`

--- a/settings/src.build.props
+++ b/settings/src.build.props
@@ -24,7 +24,8 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <IsPackable Condition="'$(OutputType)' == 'Library'">true</IsPackable>
+    <IsPackable>true</IsPackable>
+    <IsTestProject>false</IsTestProject>
   </PropertyGroup>
 
 </Project>
