--- a/settings/sln.build.targets
+++ b/settings/sln.build.targets
@@ -47,7 +47,7 @@
     Condition="'$(CompatibilityStringSyntax)' == 'true'"
     Project="$(DirEngineeringShared)Compatibility.StringSyntax\Compatibility.StringSyntax.projitems" />
 
-  <PropertyGroup Label="Automation - Copyright" Condition="'$(Copyright)' == ''">
+  <PropertyGroup Label="CopyrightAutomation" Condition="'$(Copyright)' == ''">
     <CopyrightYearStart Condition="'$(CopyrightYearStart)' == ''">$([System.DateTime]::Now.Year)</CopyrightYearStart>
     <CopyrightYear>$([System.DateTime]::Now.Year)</CopyrightYear>
     <Copyright Condition="'$(CopyrightYear)' > '$(CopyrightYearStart)'">Copyright @ $(Company) $(CopyrightYearStart) - $(CopyrightYear)</Copyright>
@@ -81,14 +81,6 @@
     <EditorConfigFiles Include="$(DirEngineeringConfigurations)global.editorconfig" Visible="false" />
   </ItemGroup>
 
-  <Target Name="RemoveSystemRuntimeFromRefPack"
-          BeforeTargets="_HandlePackageFileConflicts"
-          Condition="'@(Reference -> WithMetadataValue('NugetPackageId', 'System.Runtime.Experimental'))' != ''">
-    <ItemGroup>
-      <Reference
-        Remove="@(Reference)"
-        Condition="$([System.String]::Copy(%(Reference.Identity)).Contains('System.Runtime.dll')) and '%(Reference.NuGetPackageId)' == 'Microsoft.NETCore.App.Ref'" />
-    </ItemGroup>
-  </Target>
+  <Import Project="$([MSBuild]::GetPathOfFileAbove('RemoveSystemRuntimeFromRefPack.targets', '$(DirEngineeringTargets)'))" />
 
 </Project>
