--- a/configurations/global.editorconfig
+++ b/configurations/global.editorconfig
@@ -65,6 +65,22 @@ dotnet_naming_rule.all_type_parameter.severity              = error
 dotnet_naming_rule.all_type_parameter.style                 = all_type_parameter
 dotnet_naming_rule.all_type_parameter.symbols               = all_type_parameter
 
+dotnet_naming_style.abstract_class.required_suffix          = Base
+dotnet_naming_style.abstract_class.capitalization           = pascal_case
+dotnet_naming_symbols.abstract_class.applicable_kinds       = class
+dotnet_naming_symbols.abstract_class.required_modifiers     = abstract
+dotnet_naming_rule.abstract_class.severity                  = warning
+dotnet_naming_rule.abstract_class.style                     = abstract_class
+dotnet_naming_rule.abstract_class.symbols                   = abstract_class
+
+dotnet_naming_style.method_async.required_suffix            = Async
+dotnet_naming_style.method_async.capitalization             = camel_case
+dotnet_naming_symbols.method_async.applicable_kinds         = method
+dotnet_naming_symbols.method_async.required_modifiers       = async
+dotnet_naming_rule.method_async.severity                    = warning
+dotnet_naming_rule.method_async.style                       = method_async
+dotnet_naming_rule.method_async.symbols                     = method_async
+
 dotnet_naming_style.all_elements.capitalization             = pascal_case
 dotnet_naming_symbols.all_elements.applicable_kinds         = namespace,class,struct,enum,property,method,event,delegate,local_function
 dotnet_naming_rule.all_elements.severity                    = error
