chore: Added `CLSCompliantAttribute` to all assemblies

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -60,6 +60,12 @@
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(JENKINS_URL)' != ''">true</IsCIBuild>
   </PropertyGroup>
 
+  <ItemGroup>
+    <AssemblyAttribute Include="System.CLSCompliantAttribute">
+      <_Parameter1>false</_Parameter1>
+    </AssemblyAttribute>
+  </ItemGroup>
+
 </Project>
 
 
