--- a/settings/tests.build.props
+++ b/settings/tests.build.props
@@ -5,7 +5,7 @@
     <IsPublishable>false</IsPublishable>
     <IsPackable>false</IsPackable>
 
-    <NoWarn>$(NoWarn);CA1707</NoWarn>
+    <NoWarn>$(NoWarn);1591;CA1707</NoWarn>
   </PropertyGroup>
 
 </Project>
