chore: In `Debug` Show generated source files

--- a/settings/sln.build.targets
+++ b/settings/sln.build.targets
@@ -83,5 +83,6 @@
   </ItemGroup>
 
   <Import Project="$([MSBuild]::GetPathOfFileAbove('RemoveSystemRuntimeFromRefPack.targets', '$(DirEngineeringTargets)'))" />
+  <Import Project="$([MSBuild]::GetPathOfFileAbove('GeneratedContent.targets', '$(DirEngineeringTargets)'))" />
 
 </Project>
