--- a/settings/targets/GeneratedContent.targets
+++ b/settings/targets/GeneratedContent.targets
@@ -1,12 +1,12 @@
 <Project>
 
-  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-      <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
+  <PropertyGroup>
+      <EmitCompilerGeneratedFiles Condition="'$(Configuration)' == 'Debug'">true</EmitCompilerGeneratedFiles>
       <GeneratedFolder>Generated</GeneratedFolder>
       <CompilerGeneratedFilesOutputPath>$(GeneratedFolder)\$(TargetFramework)</CompilerGeneratedFilesOutputPath>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(Configuration)' == 'Debug'">
+  <ItemGroup>
       <Compile Remove="$(GeneratedFolder)/**/*.cs" />
       <None Include="$(GeneratedFolder)/**/*.cs" />
   </ItemGroup>
