chore: Added `CSharpier_FrameworkVersion` property

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -65,6 +65,10 @@
     </AssemblyAttribute>
   </ItemGroup>
 
+  <PropertyGroup>
+    <CSharpier_FrameworkVersion>net7.0</CSharpier_FrameworkVersion>
+  </PropertyGroup>
+
 </Project>
 
 
