--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -47,7 +47,10 @@
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(GITHUB_ACTIONS)' == 'true'">true</IsCIBuild>
     <!-- Detect GitLab CI -->
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(GITLAB_CI)' == 'true'">true</IsCIBuild>
-    <!-- Detect TeamCity -->
+    <!--
+      Detect TeamCity
+      https://www.jetbrains.com/help/teamcity/predefined-build-parameters.html#Server+Build+Properties
+    -->
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(TEAMCITY_VERSION)' != ''">true</IsCIBuild>
     <!-- Detect Wrench -->
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(BUILD_COMMAND)' != ''">true</IsCIBuild>
@@ -55,8 +58,26 @@
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(APPVEYOR)' != ''">true</IsCIBuild>
     <!-- Detect Travis -->
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(TRAVIS)' == 'true'">true</IsCIBuild>
-    <!-- Detect Jenkins -->
+    <!-- Detect Circle CI -->
+    <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(CIRCLECI)' == 'true'">true</IsCIBuild>
+    <!-- Detect AWS CodeBuild -->
+    <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(CODEBUILD_BUILD_ID)' != '' and '$(AWS_REGION)' != ''">true</IsCIBuild>
+    <!--
+      Detect Jenkins
+      https://www.jenkins.io/doc/book/pipeline/jenkinsfile/#using-environment-variables
+    -->
     <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(JENKINS_URL)' != ''">true</IsCIBuild>
+    <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(BUILD_ID)' != '' and '$(BUILD_URL)' != ''">true</IsCIBuild>
+    <!--
+      Google Cloud Build
+      https://cloud.google.com/build/docs/configuring-builds/substitute-variable-values
+    -->
+    <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(BUILD_ID)' != '' and '$(PROJECT_ID)' != ''">true</IsCIBuild>
+    <!--
+      JetBrains Space
+      https://www.jetbrains.com/help/space/automation-environment-variables.html#general
+    -->
+    <IsCIBuild Condition="'$(IsCIBuild)' == 'false' and '$(JB_SPACE_API_URL)' != ''">true</IsCIBuild>
   </PropertyGroup>
 
   <ItemGroup>
