--- a/settings/tests.build.props
+++ b/settings/tests.build.props
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <AssemblyAttribute Include="System.Diagnostics.CodeAnalysis.ExcludeFromCodeCoverageAttribute" />
+  </ItemGroup>
+
+  <ItemGroup>
     <None Remove="_snapshots\*.received.txt" />
   </ItemGroup>
 
