chore: Enabled `<Features>strict</Features>`

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -17,6 +17,8 @@
 
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
 
+    <Features>strict</Features>
+
     <AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>All</AnalysisMode>
     <EnableNETAnalyzers>true</EnableNETAnalyzers>
