fix: README Detection

--- a/settings/src.build.targets
+++ b/settings/src.build.targets
@@ -9,8 +9,8 @@
     <_SolutionLicense Include="$(SolutionDir)LICENSE" Condition="@(_SolutionLicense) == '' and Exists('$(SolutionDir)LICENSE')" />
     <None Include="@(_SolutionLicense)" Pack="true" PackagePath="" Visible="false" Condition="Exists(@(_SolutionLicense))" />
 
-    <_ProjectReadme Include="README.md" Condition="Exists('README')" />
-    <_SolutionReadme Include="$(SolutionDir)README.md" Condition="@(_ProjectReadme) == '' and @(_SolutionReadme) == '' and Exists('$(SolutionDir)README.md')" />
+    <_ProjectReadme Include="$(ProjectDir)README.md" Condition="Exists('$(ProjectDir)README.md')" />
+    <_SolutionReadme Include="$(SolutionDir)README.md" Condition="@(_ProjectReadme) == '' and Exists('$(SolutionDir)README.md')" />
     <None Include="@(_ProjectReadme)" Pack="true" PackagePath="" Visible="true" Condition="Exists(@(_ProjectReadme))" />
     <None Include="@(_SolutionReadme)" Pack="true" PackagePath="" Visible="false" Condition="!Exists(@(_ProjectReadme)) and Exists(@(_SolutionReadme))" />
   </ItemGroup>
