--- a/settings/src.build.targets
+++ b/settings/src.build.targets
@@ -13,6 +13,8 @@
     <_SolutionReadme Include="$(SolutionDir)README.md" Condition="@(_ProjectReadme) == '' and Exists('$(SolutionDir)README.md')" />
     <None Include="@(_ProjectReadme)" Pack="true" PackagePath="" Visible="true" Condition="Exists(@(_ProjectReadme))" />
     <None Include="@(_SolutionReadme)" Pack="true" PackagePath="" Visible="false" Condition="!Exists(@(_ProjectReadme)) and Exists(@(_SolutionReadme))" />
+
+    <None Include="$(DirEngineering)logo.png" Pack="true" Visible="true" PackagePath="\" />
   </ItemGroup>
 
   <Import Project="$([MSBuild]::GetPathOfFileAbove('ValidatePackageProperties.targets', '$(DirEngineeringTargets)'))" />
