chore: Added Property `IsTestableProject`

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -35,6 +35,11 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <IsTestableProject>false</IsTestableProject>
+    <IsTestableProject Condition=" '$(MSBuildProjectName.Contains('.Tests.'))' == 'true' ">true</IsTestableProject>
+  </PropertyGroup>
+
+  <PropertyGroup>
     <NoWarn>$(NoWarn);CA1810;CA1031;</NoWarn>
   </PropertyGroup>
 
