fix: Stay with boolean, instead of converting to string

--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -36,7 +36,7 @@
 
   <PropertyGroup>
     <IsTestableProject>false</IsTestableProject>
-    <IsTestableProject Condition=" '$(MSBuildProjectName.Contains('.Tests.'))' == 'true' ">true</IsTestableProject>
+    <IsTestableProject Condition=" $(MSBuildProjectName.Contains('.Tests.')) ">true</IsTestableProject>
   </PropertyGroup>
 
   <PropertyGroup>
