--- a/settings/sln.build.props
+++ b/settings/sln.build.props
@@ -45,7 +45,7 @@
     <NoWarn>$(NoWarn);CA1810;CA1031;</NoWarn>
   </PropertyGroup>
 
-  <PropertyGroup Label="Settings for test projects" Condition=" $(IsTestableProject) ">
+  <PropertyGroup Label="Settings for test projects" Condition=" '$(IsTestableProject)' == 'true' ">
     <NoWarn>$(NoWarn);CS8604;CA2007;</NoWarn>
   </PropertyGroup>
 
